# dlt

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.agents/rules/: git-github.md
.claude/: settings.json
.claude/rules/: docstrings.md
.codex/: hooks.json
.codex/hooks/: inject-git-rule.sh
.cursor/: hooks.json
.cursor/hooks/: git-commit-rule.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build_docs.yml  fork_tests_with_secrets.yml  get_docs_changes.yml  lint.yml  main.yml  test_common.yml  test_destinations_local.yml  test_destinations_remote.yml  test_docs.yml  test_examples.yml  test_hub.yml  test_sources_local.yml  test_tools_airflow.yml  test_tools_build_images.yml  test_tools_dashboard.yml  test_tools_dbt_cloud.yml  test_tools_dbt_runner.yml
deploy/dlt/: Dockerfile.airflow  Dockerfile.minimal
dlt/: version.py
dlt/common/: jsonpath.py  metrics.py  pendulum.py  pipeline.py  time.py  typing.py  utils.py
dlt/dataset/: _join.py  dataset.py  exceptions.py  lineage.py  relation.py
dlt/destinations/: job_client_impl.py  path_utils.py  queries.py  sql_client.py
dlt/extract/: extract.py  extractors.py  hints.py  items_transform.py  pipe_iterator.py  utils.py  validation.py
dlt/helpers/: airflow_helper.py  graphviz.py  ibis.py
docs/: Makefile  pyproject.toml
tests/: conftest.py  utils.py
tests/plugins/dlt_example_plugin/: pyproject.toml
tests/plugins/dlt_example_plugin/dlt_example_plugin/: __plugins__.py
tools/: check_api_breaking.py  check_hub_extras.py  install_airflow_ci.py
(+548 files in other folders)
